fixed based off pr feedback; error with networking classes & needed imports

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="start">Start:</string>
     <string name="foggybottom">Foggy Bottom</string>
     <string name="end">End:</string>
+    <string name="direc">Directions</string>
+    <string name="share">Share</string>
     <string name="enterstationname">Enter Station Name</string>
     <string name="remember">Remember</string>
     <string name="go">Go</string>
